--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,6 +23,6 @@ h3 {
 
 p {
   font-family: theme('fontFamily.spartan');
-  font-size: theme('fontSize.lg');
+  font-size: theme('fontSize.base');
   line-height: theme('lineHeight.loose');
 }
